<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="projetoextra.diegodev.com.br.projetoextra.BoasVindas">

    <TextView
        android:id="@+id/text_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Hello World!!"
        android:textColor="@color/coloBlack"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_msg"
        android:layout_marginTop="10dp"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/edtNomeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_msg"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtEmailMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obs_msg"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edtObsMsg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btn_enviar_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_msg"/>


</LinearLayout>
